--- a/output/main.html
+++ b/output/main.html
@@ -24,7 +24,20 @@
             
 <div class="container"> 
     <div class="team-area col-12 d-flex justify-content-center">
-        {{ team }}
+        <div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">carl</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 56</li>
+            <li class="list-group-item">Email: <a href="mailto:56@gmail.com">56@gmail.com</a></li>
+            <li class="list-group-item">Office number: 56</li>
+        </ul>
+    </div>
+</div>
+
         <div class="row">        
             <div class="card employee-card">
                 <div class="card-header bg-primary text-light">
