--- a/output/main.html
+++ b/output/main.html
@@ -25,67 +25,46 @@
 <div class="container"> 
     <div class="team-area col-12 d-flex justify-content-center">
         <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">carl</h2>
+    <div class="card-header bg-primary text-light">
+        <h2 class="card-title">Norm</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 56</li>
-            <li class="list-group-item">Email: <a href="mailto:56@gmail.com">56@gmail.com</a></li>
-            <li class="list-group-item">Office number: 56</li>
+            <li class="list-group-item">ID: 34</li>
+            <li class="list-group-item">Email: <a href="mailto:norm13@gmail.com">norm13@gmail.com</a></li>
+            <li class="list-group-item">Office number: 45</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header bg-primary text-light">
+        <h2 class="card-title">Carl</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 12</li>
+            <li class="list-group-item">Email: <a href="mailto:carlju@gmail.com">carlju@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/carljun" target="_blank" rel="noopener noreferrer">carljun</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header bg-primary text-light">
+        <h2 class="card-title">Tom</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 36</li>
+            <li class="list-group-item">Email: <a href="mailto:tom34@gmail.com">tom34@gmail.com</a></li>
+            <li class="list-group-item">School: MIT</li>
         </ul>
     </div>
 </div>
 
-        <div class="row">        
-            <div class="card employee-card">
-                <div class="card-header bg-primary text-light">
-                    <h2 class="card-title">{{ name }}</h2>
-                    <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ role }}</h3>
-                </div>
-                <div class="card-body">
-                    <ul class="list-group">
-                        <li class="list-group-item">ID: {{ id }}</li>
-                        <li class="list-group-item">Email: <a href="mailto:g@gmail.com">{{ email }}</a></li>
-                        <li class="list-group-item">Office number: {{ officeNumber }}</li>
-                    </ul>
-                </div>
-            </div>
-        
-                <div class="column">
-                    <div class="card employee-card">
-                        <div class="card-header bg-primary text-light">
-                            <h2 class="card-title">{{ name }}</h2>
-                            <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ role }}</h3>
-                        </div>
-                        <div class="card-body">
-                            <ul class="list-group">
-                                <li class="list-group-item">ID: {{ id }}</li>
-                                <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-                                <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{{ github }}</a></li>
-                        </div>
-                    </div>
-                </div>
-        </div>
     </div>
-            <div class="team-area col-12 d-flex justify-content-center">   
-                <div class="row">
-                    <div class="card employee-card">
-                        <div class="card-header bg-primary text-light">
-                            <h2 class="card-title">{{ name }}</h2>
-                            <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>{{ role }}</h3>
-                        </div>
-                        <div class="card-body">
-                            <ul class="list-group">
-                                <li class="list-group-item">ID: {{ id }}</li>
-                                <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-                                <li class="list-group-item">School: {{ school }}</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
     
 </div> 
 </body>
