--- a/output/main.html
+++ b/output/main.html
@@ -26,27 +26,40 @@
     <div class="team-area col-12 d-flex justify-content-center">
         <div class="card employee-card">
     <div class="card-header bg-primary text-light">
-        <h2 class="card-title">carlos</h2>
+        <h2 class="card-title">Carl</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 4</li>
-            <li class="list-group-item">Email: <a href="mailto:carlos@gmail.com">carlos@gmail.com</a></li>
-            <li class="list-group-item">Office number: 5g</li>
+            <li class="list-group-item">ID: 76</li>
+            <li class="list-group-item">Email: <a href="mailto:carl@gmail.com">carl@gmail.com</a></li>
+            <li class="list-group-item">Office number: 6B</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header bg-primary text-light">
-        <h2 class="card-title">rob</h2>
+        <h2 class="card-title">Tom</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 56</li>
-            <li class="list-group-item">Email: <a href="mailto:rob@gmail.com">rob@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/rob56" target="_blank" rel="noopener noreferrer">rob56</a></li>
+            <li class="list-group-item">ID: 13</li>
+            <li class="list-group-item">Email: <a href="mailto:tom56@yahoo.com">tom56@yahoo.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/tom56" target="_blank" rel="noopener noreferrer">tom56</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header bg-primary text-light">
+        <h2 class="card-title">Danny</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 34</li>
+            <li class="list-group-item">Email: <a href="mailto:dnm@yahoo.com">dnm@yahoo.com</a></li>
+            <li class="list-group-item">School: MIT</li>
         </ul>
     </div>
 </div>
